TFP-6390 inntektskomponent V2, sammenlign