@@ -18,28 +18,20 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import no.nav.familie.inntektsmelding.typer.dto.MånedslønnStatus;
 import no.nav.familie.inntektsmelding.typer.entitet.AktørIdEntitet;
-import no.nav.tjenester.aordningen.inntektsinformasjon.Aktoer;
-import no.nav.tjenester.aordningen.inntektsinformasjon.AktoerType;
-import no.nav.tjenester.aordningen.inntektsinformasjon.ArbeidsInntektIdent;
-import no.nav.tjenester.aordningen.inntektsinformasjon.ArbeidsInntektInformasjon;
-import no.nav.tjenester.aordningen.inntektsinformasjon.ArbeidsInntektMaaned;
-import no.nav.tjenester.aordningen.inntektsinformasjon.inntekt.Inntekt;
-import no.nav.tjenester.aordningen.inntektsinformasjon.inntekt.InntektType;
-import no.nav.tjenester.aordningen.inntektsinformasjon.response.HentInntektListeBolkResponse;
 import no.nav.vedtak.exception.IntegrasjonException;
 
 @ExtendWith(MockitoExtension.class)
-class InntektTjenesteTest {
+class InntektV2TjenesteTest {
     private static final String ORGNR = "111111111";
     private static final String AKTØR_ID = "9999999999999";
 
     @Mock
-    private InntektskomponentKlient klient;
+    private InntektskomponentV2Klient klient;
     private InntektTjeneste tjeneste;
 
     @BeforeEach
     void setUp() {
-        tjeneste = new InntektTjeneste(klient, null);
+        tjeneste = new InntektTjeneste(null, klient);
     }
 
     @Test
@@ -49,17 +41,13 @@ class InntektTjenesteTest {
         var dagensDato = stp.plusDays(10);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -74,14 +62,10 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,10,15);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        aiResponse.setArbeidsInntektMaaned(null);
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        List<InntektskomponentV2Klient.Inntektsinformasjon> response = List.of();
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 7), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 8), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
@@ -96,17 +80,13 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,10,1);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 6), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
             new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -122,19 +102,16 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,10,1);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+
         var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
         var inntekt4 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3, inntekt4);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -149,17 +126,13 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,10,15);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8));
         var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 8), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
@@ -174,18 +147,14 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,10,2);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,7));
         var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
         var inntekt4 = getInntekt(YearMonth.of(2024,9));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3, inntekt4);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 6), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
             new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 7), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
@@ -201,14 +170,9 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,10,15);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        aiResponse.setArbeidsInntektMaaned(List.of());
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+        when(klient.finnInntekt(forventetRequest)).thenReturn(List.of());
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 7), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 8), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
@@ -223,17 +187,13 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,11,4);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 11));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(20_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(30_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(20_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
             new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
@@ -250,18 +210,14 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,11,4);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 11));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(20_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(30_000));
         var inntekt4 = getInntekt(YearMonth.of(2024,10), BigDecimal.valueOf(30_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3, inntekt4);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
             new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(30_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -277,17 +233,13 @@ class InntektTjenesteTest {
         var dagensDato = stp.plusDays(10);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000), BigDecimal.valueOf(10_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000), BigDecimal.valueOf(5_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(35_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(30_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -302,17 +254,13 @@ class InntektTjenesteTest {
         var dagensDato = stp.plusDays(10);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000), BigDecimal.valueOf(10_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000), BigDecimal.valueOf(5_000), null);
         var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000), null);
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(35_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(30_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -327,18 +275,14 @@ class InntektTjenesteTest {
         var dagensDato = LocalDate.of(2024,11,18);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 8), YearMonth.of(2024, 11));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt0 = getInntekt(YearMonth.of(2024,8));
         var inntekt1 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,10), BigDecimal.valueOf(25_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,11), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt0, inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt0, inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 10), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -355,7 +299,7 @@ class InntektTjenesteTest {
 
         when(klient.finnInntekt(forventetRequest)).thenThrow(new IntegrasjonException("TESTMELDING", "Noe feil"));
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 9), MånedslønnStatus.NEDETID_AINNTEKT)
             , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 10), MånedslønnStatus.NEDETID_AINNTEKT)
@@ -370,17 +314,13 @@ class InntektTjenesteTest {
         var dagensDato = stp.plusDays(10);
         var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
         var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(3_000));
         var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(-6_000));
         var inntekt3 = getInntekt(YearMonth.of(2024,9));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+        var response = List.of(inntekt1, inntekt2, inntekt3);
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntektV2(aktørId, stp, dagensDato, ORGNR);
 
         var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(3000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
             , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(-6000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
@@ -403,23 +343,10 @@ class InntektTjenesteTest {
         assertThat(inntektsopplysinger.måneder()).containsAll(forventetListe);
     }
 
-    private static ArbeidsInntektMaaned getInntekt(YearMonth årMåned, BigDecimal... beløp) {
-        var inntektMånedResponse = new ArbeidsInntektMaaned();
-        inntektMånedResponse.setAarMaaned(årMåned);
+    private static InntektskomponentV2Klient.Inntektsinformasjon getInntekt(YearMonth årMåned, BigDecimal... beløp) {
         List<BigDecimal> alleBeløp = beløp == null ? Collections.emptyList() : Arrays.asList(beløp);
-        var alleInntekter = alleBeløp.stream().map(b -> {
-                var inntekt = new Inntekt();
-                inntekt.setVirksomhet(new Aktoer(ORGNR, AktoerType.ORGANISASJON));
-                inntekt.setInntektType(InntektType.LOENNSINNTEKT);
-                inntekt.setUtbetaltIMaaned(årMåned);
-                inntekt.setBeloep(b);
-                return inntekt;
-            })
-            .toList();
-        var aiInformasjon = new ArbeidsInntektInformasjon();
-        aiInformasjon.setInntektListe(alleInntekter);
-        inntektMånedResponse.setArbeidsInntektInformasjon(aiInformasjon);
-        return inntektMånedResponse;
+        var alleInntekter = alleBeløp.stream().map(b -> new InntektskomponentV2Klient.Inntekt("Loennsinntekt", b)).toList();
+        return new InntektskomponentV2Klient.Inntektsinformasjon(årMåned, ORGNR, alleInntekter);
     }
 
 }
